@@ -373,6 +373,30 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 	</td>
 </tr>
 <tr>
+	<td bgcolor="#ddddff">
+		$g_email_separator1
+	</td>
+	<td bgcolor="#ffffff">
+		The line separator for email
+	</td>
+</tr>
+<tr>
+	<td bgcolor="#ddddff">
+		$g_email_separator2
+	</td>
+	<td bgcolor="#ffffff">
+		The secondary line separator for email
+	</td>
+</tr>
+<tr>
+	<td bgcolor="#ddddff">
+		$g_email_padding_length
+	</td>
+	<td bgcolor="#ffffff">
+		Number of padding characters to use.
+	</td>
+</tr>
+<tr>
 	<td colspan="2" bgcolor="#eeeeee">
 		The email system allows the package to notify users when significant events occur.  You should have a working Mail Transport Agent (MTA) on your system.  On unix systems this is usually sendmail and usually nothing needs to be done.  For problems regarding mail then visit the support forums or read up on the user notes in the mail() function at: <a href="http://www.php.net/manual/en/function.mail.php">http://www.php.net/manual/en/function.mail.php</a>
 		<p>
